nginx/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-prod-webapp-aalimsee
  namespace: prod
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
